--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="flex-1 grid grid-cols-1 mt-5 md:grid-cols-2 lg:grid-cols-3 lg:gap-6 md: gap-6 lg:mt-5">
                 <!-- first card  -->
                 <div class="card w-96 bg-base-100 shadow-xl">
-                    <figure><img src="images/triangle.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/rectangle.png" /></figure>
                     <div class="card-body">
                       <h2 class="card-title">Triangle</h2>
                       <p>Area (A) = 0.5 X b X h</p>
@@ -30,7 +30,7 @@
                         <input type="text" name="" id="triangle-height" placeholder="height" class="border w-20 px-1 text-xl bg-gray-200">
                         <span mr-2>cm</span>
                       </p>
-                      <p>Area: <span id="triangle-area">0</span> cm <sup>2</sup></p>
+                      <p>Area: <span id="./images/triangle.png">0</span> cm <sup>2</sup></p>
                       <div class="card-actions ">
                         <button class="btn btn-primary w-full" onclick="triangleAreaCalculate()">Calculate</button>
                       </div>
@@ -38,7 +38,7 @@
                   </div>
                 <!-- second card  -->
                 <div class="card w-96 bg-base-100 shadow-xl">
-                    <figure><img src="images/rectangle.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/rectangle.png" /></figure>
                     <div class="card-body">
                       <h2 class="card-title">Rectangle</h2>
                       <p>Area (A) = w X l</p>
@@ -56,7 +56,7 @@
                   </div>
                 <!-- third card  -->
                 <div class="card w-96 bg-base-100 shadow-xl">
-                    <figure><img src="/images/parallelogram.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/parallelogram.png" /></figure>
                     <div class="card-body">
                       <h2 class="card-title">parallelogram</h2>
                       <p>Area (A) = b X h</p>
@@ -75,7 +75,7 @@
                   </div>
                 <!-- 4th card  -->
                 <div class="card w-96 bg-base-100 shadow-xl">
-                    <figure><img src="/images/rhombus.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/rhombus.png"  /></figure>
                     <div class="card-body">
                       <h2 class="card-title">Rhombus</h2>
                       <p>Area (A) = 0.5 X d<sub>1</sub>X d<sub>2</sub></p>
@@ -91,7 +91,7 @@
                   </div>
                 <!-- 5th card  -->
                 <div class="card w-96 bg-base-100 shadow-xl">
-                    <figure><img src="/images/pentagon.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/pentagon.png" /></figure>
                     <div class="card-body">
                       <h2 class="card-title">Pentagon</h2>
                       <p>Area (A) = 0.5 X p X b</p>
@@ -107,7 +107,7 @@
                   </div>
                 <!-- 6th card  -->
                 <div class="card w-96 bg-base-100 shadow-xl">
-                    <figure><img src="/images/ellipse.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/ellipse.png" /></figure>
                     <div class="card-body">
                       <h2 class="card-title">Ellipse</h2>
                       <p>Area (A) =  πab</p>
