--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="flex-1 grid grid-cols-1 mt-5 md:grid-cols-2 lg:grid-cols-3 lg:gap-6 md: gap-6 lg:mt-5">
                 <!-- first card  -->
                 <div class="card w-96 bg-base-100 shadow-xl">
-                    <figure><img src="./images/rectangle.png" /></figure>
+                    <figure><img src="./images/triangle.png" /></figure>
                     <div class="card-body">
                       <h2 class="card-title">Triangle</h2>
                       <p>Area (A) = 0.5 X b X h</p>
@@ -30,7 +30,7 @@
                         <input type="text" name="" id="triangle-height" placeholder="height" class="border w-20 px-1 text-xl bg-gray-200">
                         <span mr-2>cm</span>
                       </p>
-                      <p>Area: <span id="./images/triangle.png">0</span> cm <sup>2</sup></p>
+                      <p>Area: <span id="triangle-area">0</span> cm <sup>2</sup></p>
                       <div class="card-actions ">
                         <button class="btn btn-primary w-full" onclick="triangleAreaCalculate()">Calculate</button>
                       </div>
@@ -125,9 +125,9 @@
             </div>
             <!-- area calculator  -->
             <div class="w-[400px]">
-                <div class="text-4xl ml-8">
+                <div class="text-4xl ml-12">
                     Area Calculator</div>
-                    <div id="calculation-entry"></div>
+                    <div class="ml-12" id="calculation-entry"></div>
 
             </div>
         </div>
